deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-pv-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-pv-storage
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-portal-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-portal-api
  template:
    metadata:
      labels:
        app: banking-portal-api
    spec:
      containers:
        - name: banking-portal-api
          image: default-route-openshift-image-registry.apps.rm2.thpm.p1.openshiftapps.com/sentimental37-dev/banking-portal-api:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: banking-portal-api
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: banking-portal-api
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: banking-portal-api
spec:
  to:
    kind: Service
    name: banking-portal-api
  port:
    targetPort: 8080
